syntax = "proto3";

package example;

option go_package = "github.com/lovelyoyrmia/protobuf-examples";

message Customer {
    string name = 1;
    string email = 2;
    int32 age = 3;
}

message GetCustomerRequest {
    int32 id = 1;
}

message GetCustomerResponse {
    repeated Customer user = 1;
}

service CustomerService {
    rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse);
}
